# Dandy-Dungeon

./: .gitignore  GEMINI.md  LICENSE  PROJECT.md  README  README.md  TEST_INFRA.md  TEST_READY.md  dandy.js  index.html
.agent/rules/: repo-overview.md
dandy-360/: Dandy360.cpp  Dandy360.sln  Dandy360.vcproj  stdafx.cpp  stdafx.h
dandy-360/Xui/: Help.xui  Play.xui  main.xui  skin_dandy.xui
dandy-atari-8-bit/: Dandy 1.2 Backup 4-23-83.atr  Dandy 1.2 Source Backup 4-23-83.atr  README.md
dandy-atari-8-bit/src/: CHARSET.TXT  DINIT.TXT  DSHOW.TXT  DSWAP.TXT  DUNGEON.TXT  EDIT.TXT  EFFFECTS.TXT  GAME.TXT  HAND.TXT  MAIN.TXT  MAKELF.TXT  MIS.TXT  MONS.TXT  SCORE.TXT  SETUP.TXT  SOUND.TXT  SYSTEXT.TXT  TITLE.TXT  VBI.TXT
dandy-c++/: Dandy.cpp  Dandy.sln  Dandy.vcproj  dandy.pcx
dandy-c++/levels/: level.e
dandy-clojure/: .classpath  .gitignore  .project  README.md  project.clj
dandy-clojurescript/: .gitignore  README.md  dandy.clj  dandy.cljs  dandy.html  index.html  project.clj  server.sh
dandy-clojurescript/src-cljs/: dandy.cljs
dandy-coffee/: .gitignore  README  build.sh  dandy.coffee  dandy.html  dandy.js
dandy-csharp/: CSScheme.cs  Dandy.cs  Dandy.csproj
dandy-csharp/levels/: level.m  level.w
dandy-csharp12/: Dandy.csproj  Dandy.sln
dandy-csharp12/levels/: level.b  level.f  level.z
dandy-csharp20/: Dandy.cs  Dandy.csproj  Dandy.sln
dandy-csharp20/levels/: level.aold  level.i  level.n  level.q
dandy-dart/: .gitignore  Dandy.app  Dandy.dart  Dandy.html
dandy-gb/: .gitignore  Makefile  README.md
dandy-haskell/: .gitignore  README.md  build.sh  dandy-haskell.cabal
dandy-haskell/assets/levels/: LEVEL.L  LEVEL.P
dandy-haskell/src/: TestMain.hs
dandy-haskell/src/Dandy/: AI.hs  Camera.hs  Consts.hs  Embed.hs  Entity.hs  Game.hs  Graphics.hs  Map.hs  Physics.hs  Rng.hs  Types.hs  Wasm.hs
dandy-haskell/web/: app.js  dandy-haskell.wasm  index.html
dandy-ios/: .clang-format
dandy-ios-swift/: .gitignore
dandy-js/: .project  dandy.html  dandy.js  levels.js  strike.js
dandy-lispyscript/: dandy.html  dandy.ls
dandy-py/: .gitignore  .project  .pydevproject  README.md  pyproject.toml  verify_game.py
dandy-py/src/: constants.py  controls.py  entities.py  game.py  main.py  map.py  media.py  strike.py
dandy-rust/: Cargo.toml  README.md  index.html
dandy-rust/assets/levels/: LEVEL.G  LEVEL.J  LEVEL.T
dandy-rust/src/: ai.rs  camera.rs  consts.rs  entity.rs  game.rs  graphics.rs  lib.rs  map.rs  physics.rs  rand.rs
dandy-spritekit/: .gitignore
dandy-ts/: .gitignore  README.md  dandy.html  dandy.ts  levels.ts  package.json  strike.ts  tsconfig.json
(+149 files in other folders)
