[project]
name = "dandy-py"
version = "0.1.0"
description = "Modernized Python 3.14 port of Dandy Dungeon using Pygame-ce"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Jack Pal", email = "jackpal@google.com" }
]
dependencies = [
    "pygame-ce>=2.5.2",
]

[dependency-groups]
dev = [
    "ruff>=0.3.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
